# agent-skills

./: .gitignore  README.md  install.py  minimal-specs.skill  mspec.skill
.claude-plugin/: plugin.json
extra-skills/mspec/: SKILL.md
extra-skills/mspec/references/: plan-template.md  spec-template.md
skills/minimal-specs/: SKILL.md
skills/public-github/: SKILL.md
skills/python-project/: SKILL.md  pyproject.toml
skills/tasks-py/: SKILL.md  tasks.py
skills/zaira/: CONFLUENCE.md  SKILL.md
skills/zipget/: SKILL.md
